endpoint create tree by estate, get estate by id, get drone plan by id and max_distance
